--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "version": "0.1.0",
   "devDependencies": {
     "webpack-dev-server": "^4.6.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
